Added "Hide All" and "Reveal All" buttons

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -41,6 +41,8 @@
     </header>
     <main>
       <h1 id="Niji's_Creation">虹の造化者</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- あたしらのシステム（Our System） -->
       <article>
         <h2 id="Our_System">システム：虹</h2>
