Fixed Xinxing's name

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -535,13 +535,13 @@
               <p>健康上の理由で学校を中退せざるを得なくなる前、錯誤の最高の科目は数学と科学であった。最悪の科目は、様々な肺の問題と喉の問題に起因する言語障害のために、実際には国語であった。それを補う為に、普段はオンラインチャットや手話でコミュニケーションをとっている。錯誤は手話を使うが、聴覚はほとんどのドラゴンよりも鋭いである。皮肉なことに、言語障害にもかかわらず、多くの言語に非常に堪能であるという事である。</p>
               <p>錯誤が抱えている健康上の問題と状態の非網羅的なリスト：<ruby>龍筋肉悪化症<rt>りゅうきんにくあっかしょう</rt></ruby>（筋肉を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と<ruby>龍内臓悪化症<rt>りゅうないぞうあっかしょう</rt></ruby>（内臓を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と自閉症とＡＤＨＤと尿失禁と便失禁（おむつを必要とし、筋肉が悪化する事によって引き起こされる）と腰脊髄麻痺（車椅子を必要とする）と喘息（主に肺内のサイバネティック・インプラントのおかげで対処されている）と深刻なてんかん（脳が人工であるにも関わらず。脳にはセンサーが内蔵されており、発作が起きるたびに看護師に警告を発す）と軽度な光過敏性（太陽の下で外出すると極端な偏頭痛を起こす）とビタミンＤ欠乏症（日光にさらされない為）と完全な免疫不全（いつも寝屋にとどまる理由の一部である）と様々な喉の問題（その結果、恒久的な栄養チューブを持ち、多くの音声障害を発症した）と不安障害など。</p>
               <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Cuòwù</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Tsʻo<sup>4</sup>-wu<sup>5</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Tsuoh.wuh</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">錯誤</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">错误</span>」で書く。</p>
-              <!-- 極超新星（Jíchāo Xīnxīng｜極超新星｜极超新星） -->
+              <!-- 新星（Xīnxīng｜新星｜新星） -->
               <p>——新星について</p>
               <p>
-                極超　新星（きょくちょう　しんせい）<br>
-                Jichao Xinxing
+                新星（しんせい）<br>
+                Xinxing
               </p>
-              <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Jíchāo Xīnxīng</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Chi<sup>2</sup>-chʻao<sup>1</sup> Hsin<sup>1</sup>-hsing<sup>1</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Jyichau Shinshing</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">極超新星</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">极超新星</span>」で書く。</p>
+              <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Xīnxīng</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Hsin<sup>1</sup>-hsing<sup>1</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Shinshing</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">新星</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">新星</span>」で書く。</p>
               <!-- タモードヴァーラム（Tamodvaram｜തമോദ്വാരം｜Tamōdvāraṁ） -->
               <p>——タモードヴァーラムについて</p>
               <p>
